# pyuyuni

./: .gitignore  README.md  setup.cfg  setup.py
pyuyuni/: __init__.py  exceptions.py  hosts.py  management.py  release.py
tests/: README.md  test_hosts.py  test_login.py  test_management.py  utilities.py  uyuni_config.yml.tmpl  uyuni_config.yml.vagrant
tests/Vagrant/: README.md  Vagrantfile  client.yml  requirements.yml  uyuni.yml
tests/Vagrant/files/: hosts
