[metadata]
name = pyuyuni
version = attr: pyuyuni.release.__version__
author = Christian Stankowic
author_email = info@cstan.io
project_urls =
    Bug Tracker=https://github.com/stdevel/ansible-collection-uyuni/issues
    Source Code=https://github.com/stdevel/ansible-collection-uyuni
description = Python library for controlling Uyuni / SUSE Manager
keywords = uyuni, automation, ansible
license = GPLv3+
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities
